[tool.poetry]
name = "lecture-9-standard-libraries"
version = "0.1.0"
description = ""
authors = ["Nicolay Veniaminov <nicolay.veniaminov@dct-ai.com>"]
readme = "README.md"
packages = [{include = "lecture_9_standard_libraries"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
fastapi = "^0.104.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
